@@ -22,6 +22,7 @@ dependencies {
 
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
@@ -40,6 +41,9 @@ test {
 }
 compileJava {
     options.compilerArgs += ['--enable-preview']
+}
+test {
+    jvmArgs += ['--enable-preview']
 }
 
 //sourceSets {
